# python_web_hw8_RabbitMQ

./: README.md
myenv/: pyproject.toml
myenv/myenv/: connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py
